refactor(hud): 重构维修模式HUD界面渲染逻辑
- 移除侦探被动HUD中的角色验证相关导入和代码
- 修改侦探被动HUD的条件判断逻辑
- 重写维修逃生HUD的面板渲染系统
- 替换原有的玻璃面板为木质面板设计
- 更新HUD元素的位置布局和尺寸参数
- 简化集合操作使用索引删除替代队列方法
- 优化战斗提示和硬币提示的渲染效果
- 重新设计状态面板的信息展示结构
- 添加角落装饰和像素化进度条样式
- 整合事件面板的危险度和时间显示逻辑
- 优化中立任务目标数量的获取方式
- 统一颜色主题和UI组件的视觉风格